--- a/PMS-PropertyHapa.Staff/Views/Accounting/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Accounting/Index.cshtml
@@ -124,7 +124,7 @@
                 </div>
             }
             <!-- Card for View Deposit -->
-            @if (viewDepositPermission)
+@*             @if (viewDepositPermission)
             {
                 <div class="col-md-4">
                     <div class="card">
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                 </div>
-            }
+            } *@
         <!-- Continue for remaining cards -->
         
             <!-- Card for View Billing -->
@@ -158,7 +158,7 @@
                 </div>
             }
             <!-- Card for View Invoices -->
-            @if (viewInvoicesPermission)
+@*             @if (viewInvoicesPermission)
             {
                 <div class="col-md-4">
                     <div class="card">
@@ -172,7 +172,7 @@
                         </div>
                     </div>
                 </div>
-            }
+            } *@
             
             <!-- Card for Budgeting -->
             @if (viewBudgetPermission)
